Update exercise to have more realistic questions.