@@ -2,6 +2,7 @@ package com.synacy.genericsending;
 
 import com.synacy.FaxMessage;
 import com.synacy.SmsMessage;
+import com.synacy.compress.ImageType;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -13,25 +14,24 @@ import java.util.List;
 public class Main {
 
 	/**
-	 * Assume this will be the messages that has to be sent and charged
+	 * Assume this will be the messages that has to be sent
 	 */
 	public static List<Object> generateMessages() {
-		return new ArrayList<Object>(Arrays.asList(new FaxMessage("631111111", "some fax message".getBytes()),
-				new FaxMessage("632222222", "some fax message".getBytes()),
+		return List.of(new FaxMessage("631111111", "some jpeg image".getBytes(), ImageType.JPEG, 100),
+				new FaxMessage("632222222", "some tiff image".getBytes(), ImageType.TIFF, 100),
 				new SmsMessage("633333333", "sms message"),
 				new SmsMessage("634444444", "sms message"),
-				new FaxMessage("63555555", "some fax message".getBytes())));
+				new FaxMessage("63555555", "some png image".getBytes(), ImageType.PNG, 100));
 	}
 
 	/**
-	 * In the previous example, we are able to send each message knowing what the message type prior.
-	 * Now, what if we want to have a method that is able to send any message without using conditional statements.
-	 * Let's call that class GenericMessageSenderService.
+	 * See GenericMessageSenderService. It is a class that is able to take in any type of message then send compressed versions of those messages
+	 * As you can see, there are lots of conditional if statements inside that class. This is going to be problematic when we want to add more message types.
+	 * How would we remove these if statements, but retain GenericMessageSenderService's capability to send any message types?
 	 * */
 	public static void main (String args[]) {
 		GenericMessageSenderService genericMessageSenderService = new GenericMessageSenderService();
-		generateMessages().forEach((message) -> {
-			genericMessageSenderService.send(message);
-		});
+		List<Object> generatedMessages = generateMessages();
+		generatedMessages.forEach(genericMessageSenderService::send);
 	}
 }
